2000-12-15  Akim Demaille  <akim@epita.fr>

	* acgeneral.m4 (_AC_PREPROC_IFELSE): Use ac_status as set by
	AC_TRY_EVAL.
	(_AC_COMPILE_IFELSE, _AC_LINK_IFELSE, _AC_RUN_IFELSE): More alike,
	using AS_IFELSE, and systematically AC_TRY_COMMAND when testing
	something (for the logs).

2000-12-15  Akim Demaille  <akim@epita.fr>

	* aclang.m4 (_AC_PROG_PREPROC_WORKS): Use _AC_PREPROC_IFELSE.
	* acgeneral.m4 (_AC_TRY_CPP): Its last use was that above, so
	inline it into...
	(_AC_PREPROC_IFELSE): here.

2000-12-15  Akim Demaille  <akim@epita.fr>

	* tests/atgeneral.m4 (AT_INIT): Forget about `-n'.
	Adjust so that `./testsuite -h 1 2' explains only tests 1 & 2.

2000-12-15  Akim Demaille  <akim@epita.fr>

	* acgeneral.m4 (_AC_EVAL): New.
	(AC_TRY_EVAL, AC_TRY_COMMAND): Use it.

2000-12-15  Akim Demaille  <akim@epita.fr>

	* acgeneral.m4 (_AC_PREPROC_IFELSE, AC_PREPROC_IFELSE): New.
	(AC_TRY_CPP): Use AC_PREPROC_IFELSE.
	(AC_CHECK_MEMBER, AC_CHECK_DECL, _AC_CHECK_TYPE_NEW): Quote
	properly.
	* acheaders.m4 (AC_CHECK_HEADER): Quote properly, use
	AC_PREPROC_IFELSE.
	* acspecific.m4 (_AC_PATH_X_DIRECT): Use AC_PREPROC_IFELSE.

2000-12-15  Akim Demaille  <akim@epita.fr>

	* m4sugar.m4 (m4_init): Catch `dnl'.

2000-12-15  Pavel Roskin  <proski@gnu.org>

	* m4sh.sh (AS_ERROR): Restore dnl at the end of the macro.

2000-12-14  Pavel Roskin  <proski@gnu.org>

	* tests/semantics.at (AC_CHECK_TYPES): There are two tests with
	this name. Rename the second one to "AC_CHECK_TYPES: backward
	compatibility"
	(AC_TRY_LINK_FUNC): Removed. It's now in tests/compile.at.
	(C keywords): Likewise.
	(AC_PROG_CPP with warnings): Likewise.
	(AC_PROG_CPP without warnings): Likewise.

2000-12-14  Akim Demaille  <akim@epita.fr>

	Put back AC_CYGWIN etc. under the responsibility of the
	configure.in maintainer, but discourage its use.

	* acspecific.m4 (_AC_CYGWIN, _AC_MINGW32, _AC_EMXOS2): Rename as...
	(AC_CYGWIN, AC_MINGW32, AC_EMXOS2): these.
	AU defined on top of AC_CANONICAL_HOST and $host_os.