@@ -1,5 +1,15 @@
 2000-12-15  Akim Demaille  <akim@epita.fr>
 
+	* aclang.m4 (AC_LANG(C), AC_LANG(C++), AC_LANG(Fortran 77))
+	(AC_PROG_CPP, AC_PROG_CXXCPP, AC_PROG_GCC_TRADITIONAL)
+	(_AC_PROG_CC_G, AC_PROG_CC_C_O, _AC_PROG_CXX_G, AC_PROG_CC_STDC):
+	Don't use `${CC-cc}' since now the AC_REQUIRE machinery guarantees
+	that $CC is defined.  And if not, it's a bug which must be
+	observable.
+	* acspecific.m4 (AC_SYS_LARGEFILE): Likewise.
+
+2000-12-15  Akim Demaille  <akim@epita.fr>
+
 	* acgeneral.m4 (_AC_PREPROC_IFELSE): Use ac_status as set by
 	AC_TRY_EVAL.
 	(_AC_COMPILE_IFELSE, _AC_LINK_IFELSE, _AC_RUN_IFELSE): More alike,
